cluster/apps/networking/ingressroutes/auth-ingressroute.yaml
# This is necessary because external dns doesnt support ingressroutes yet
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authelia-cloudflare-dns
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: "auth.${SECRET_PUBLIC_DOMAIN}"

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: authelia-ingress
  namespace: networking
  annotations:
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
    external-dns/is-public: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`auth.${SECRET_PUBLIC_DOMAIN}`)"
      kind: Rule
      services:
        - name: authelia
          namespace: auth
          port: 80
  tls:
    secretName: "${SECRET_PUBLIC_DOMAIN/./-}-tls"
