cluster/apps/networking/ingressroutes/changedetection-io-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: changedetection-io-ingress
  namespace: networking
  annotations:
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
    external-dns/is-public: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`changedetection-io.${SECRET_PUBLIC_DOMAIN}`)"
      kind: Rule
      middlewares:
      - name: chain-authelia-auth
        namespace: auth
      services:
        - name: changedetection-io
          namespace: default
          port: 5000
  tls:
    secretName: "${SECRET_PUBLIC_DOMAIN/./-}-tls"
