cluster/apps/networking/ingressroutes/jellyfin-ingressroute.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-ingress
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`jellyfin.${SECRET_PUBLIC_DOMAIN}`)"
      kind: Rule
      services:
        - name: jellyfin
          namespace: default
          port: 8096
  tls:
    secretName: "${SECRET_PUBLIC_DOMAIN/./-}-tls"
