cluster/apps/networking/ingressroutes/matrix-ingressroute.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: matrix-ingress
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`matrix.${SECRET_PUBLIC_DOMAIN}`)"
      kind: Rule
      services:
        - name: matrix-synapse
          namespace: comms
          port: 8008
  tls:
    secretName: "${SECRET_PUBLIC_DOMAIN/./-}-tls"
