cluster/apps/networking/ingressroutes/overseerr-ingressroute.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: overseerr-ingress
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`requests.${SECRET_PUBLIC_DOMAIN}`)"
      kind: Rule
      services:
        - name: overseerr
          namespace: default
          port: 5055
  tls:
    secretName: "${SECRET_PUBLIC_DOMAIN/./-}-tls"
