cluster/apps/networking/ingressroutes/prowlarr-ingressroute.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr-ingress
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`prowlarr.${SECRET_PUBLIC_DOMAIN}`)"
      kind: Rule
      middlewares:
      - name: chain-authelia-auth
        namespace: auth
      services:
        - name: prowlarr
          namespace: default
          port: 9696
  tls:
    secretName: "${SECRET_PUBLIC_DOMAIN/./-}-tls"
