cluster/apps/networking/ingressroutes/sonarr-ingressroute.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-ingress
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`sonarr.${SECRET_PUBLIC_DOMAIN}`)"
      kind: Rule
      middlewares:
      - name: chain-authelia-auth
        namespace: auth
      services:
        - name: sonarr
          namespace: default
          port: 8989
  tls:
    secretName: "${SECRET_PUBLIC_DOMAIN/./-}-tls"
