cluster/apps/networking/ingressroutes/tdarr-ingressroute.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tdarr-ingress
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`tdarr.${SECRET_PUBLIC_DOMAIN}`)"
      kind: Rule
      middlewares:
      - name: chain-authelia-auth
        namespace: auth
      services:
        - name: tdarr
          namespace: default
          port: 8265
  tls:
    secretName: "${SECRET_PUBLIC_DOMAIN/./-}-tls"
