cluster/apps/networking/ingressroutes/uptime-kuma-ingressroute.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma-ingress
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`uptime.${SECRET_PUBLIC_DOMAIN}`)"
      kind: Rule
      middlewares:
      - name: chain-authelia-auth
        namespace: auth
      services:
        - name: uptime-kuma
          namespace: default
          port: 3001
  tls:
    secretName: "${SECRET_PUBLIC_DOMAIN/./-}-tls"
