cluster/apps/networking/ingressroutes/zigbee2mqtt-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: zigbee2mqtt-ingress
  namespace: networking
  annotations:
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
    external-dns/is-public: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`zigbee2mqtt.${SECRET_PUBLIC_DOMAIN}`)"
      kind: Rule
      middlewares:
      - name: chain-authelia-auth
        namespace: auth
      services:
        - name: zigbee2mqtt
          namespace: default
          port: 8080
  tls:
    secretName: "${SECRET_PUBLIC_DOMAIN/./-}-tls"
